@@ -85,7 +85,7 @@ crc             crc32           1.2             1.3             TS, B, I
                 crc16           1.1             1.1.1           B
                 cksum           1.0.1           1.1.0           D, TS, I
 ------          -------         -----------     -----------     -------------------------------
-csv             csv             0.5.1           0.5.2           TS
+csv             csv             0.5.1           0.6             TS, EF
 ------          -------         -----------     -----------     -------------------------------
 des             des             0.8.2           1.0.0           ** API **, Import tclDES(jr), s.a.
 ------          -------         -----------     -----------     -------------------------------
