@@ -1,10 +1,10 @@
 [comment {-*- tcl -*-}]
-[manpage_begin csv n 0.5.2]
-[copyright {2002 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[manpage_begin csv n 0.6]
+[copyright {2002-2005 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {CSV processing}]
 [titledesc {Procedures to handle CSV data.}]
 [require Tcl 8.3]
-[require csv [opt 0.5.2]]
+[require csv [opt 0.6]]
 [description]
 
 [para]
@@ -32,6 +32,16 @@ containing these values. The separator character can be defined by the
 caller, but this is optional. The default is ",". Each element of the
 outer list is considered a record, these are separated by newlines in
 the result. The elements of each record are formatted as usual (via
+[cmd ::csv::join]).
+
+[call [cmd ::csv::joinmatrix] [arg matrix] "{[arg sepChar] ,}"]
+
+Takes a [arg matrix] object following the API specified for the
+struct::matrix package and returns a string in CSV format containing
+these values. The separator character can be defined by the caller,
+but this is optional. The default is ",". Each row of the matrix is
+considered a record, these are separated by newlines in the
+result. The elements of each record are formatted as usual (via
 [cmd ::csv::join]).
 
 [call [cmd ::csv::read2matrix] [opt [option -alternate]] [arg "chan m"] "{[arg sepChar] ,} {[arg expand] none}"]
